--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
               <a class="first-link" href="https://www.instagram.com/chreations"><i class="fa fa-instagram index-icon"></i></a>
               <a href="mailto:christian.lei1@gmail.com?Subject=I%20want%20to%hire%20you!" target="_top"><i class="fa fa-envelope index-icon"></i></a>
             </p>
-  	      </div>
+            <i class="fa fa-angle-down arrow"></i>
+	      </div>
         </section>
       <section id="second-page">
         <div class="second-page">
