--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
            <div class="third-page">
              <img class="slideInRight board" src="public/img/trail-blazer.png" alt="header">
              <div id="trail-blazer">
-               <span class="title">trail blazer</span><br>
-               <span class="date">September 2015</span><br>
-               <p class="text">the trail blazer game was a small text based game that was built using a ruby and sinatra backend. It was designed with a css and html front end given that we had not learned javascript and jquery yet.</p>
-               <a href="http://trail-blazer-game.herokuapp.com"><i class="fa fa-link"></i></a>
-               <a href="https://github.com/christhub/bar_crawl"><i class="fa fa-github"></i></a>
+               <span class="title">albina co - steel bending</span><br>
+               <span class="date">January 2016 - April 2016</span><br>
+               <p class="text">This website was originally built before the mobile first initiative happened and I took an old site and made it mobile first using technoligies that include: ASP.NET, C#, HTML, CSS, JavaScript, Bootstrap. </p>
+               <a href="https://www.albinaco.com"><i class="fa fa-link"></i></a>
              </div>
 
              <br>
