changes albina picture

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
      </section>
          <section id="third-page">
            <div class="third-page">
-             <img class="slideInRight board" src="public/img/trail-blazer.png" alt="header">
+             <img class="slideInRight board" src="public/img/albina.png" alt="header">
              <div id="trail-blazer">
                <span class="title">albina co - steel bending</span><br>
                <span class="date">January 2016 - April 2016</span><br>
